[package]
name = "bevy_ratatui"
description = "A Bevy plugin for building terminal user interfaces with Ratatui"
version = "0.11.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ratatui/bevy_ratatui"
documentation = "https://docs.rs/bevy_ratatui"
authors = ["cxreiff <cooper@cxreiff.com>", "Joshka"]
categories = ["command-line-interface"]
keywords = ["cli", "ratatui", "terminal", "tui", "bevy"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false }
bitflags = "2.8.0"
color-eyre = "0.6.3"
ratatui = { version = "0.30.0", default-features = false }
soft_ratatui = { version = "0.1", optional = true }
tracing = "0.1.44"

[dev-dependencies]
rand = "0.9.3"
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false, features = ["bevy_state"] }
ratatui = { version = "0.30.0", default-features = false, features = [
    "underline-color",
    "layout-cache",
    "unstable-widget-ref",
] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Workaround for objc2-foundation crash on macOS 26 (Tahoe).
# See: https://github.com/bevyengine/bevy/issues/19625
[profile.dev.package.objc2]
debug-assertions = false

[features]
default = ["std", "async_executor", "crossterm", "keyboard", "mouse"]
crossterm = ["ratatui/crossterm"]
windowed = ["dep:soft_ratatui", "bevy/default"]
keyboard = ["bevy/keyboard"]
mouse = ["bevy/mouse", "bevy/touch"]

# Features for `std` platforms
std = ["bevy/std"]
async_executor = ["bevy/async_executor"]

# Features for `no_std` platforms
libm = ["bevy/libm"]
critical-section = ["bevy/critical-section"]
